setup modules in frontend

--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "@nestjs/testing": "^5.0.0-beta.6",
     "@nestjs/typeorm": "^5.2.2",
     "@nestjs/websockets": "^5.0.0-beta.6",
+    "bcrypt": "^3.0.3",
     "fastify-formbody": "^2.0.0",
     "mysql": "^2.16.0",
     "passport": "^0.4.0",
