--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build_prod_and_copy": "npm run build && rm -rf ../tb-build/app/client && cp -rf dist/. ../tb-build/app/client"
   },
   "private": true,
   "dependencies": {
