--- a/api/package.json
+++ b/api/package.json
@@ -28,8 +28,11 @@
     "@nestjs/typeorm": "^5.2.2",
     "@nestjs/websockets": "^5.0.0-beta.6",
     "bcrypt": "^3.0.3",
+    "date-fns": "^1.30.1",
     "fastify-formbody": "^2.0.0",
+    "install": "^0.12.2",
     "mysql": "^2.16.0",
+    "npm": "^6.7.0",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
