--- a/api/package.json
+++ b/api/package.json
@@ -27,7 +27,7 @@
     "@nestjs/testing": "^5.0.0-beta.6",
     "@nestjs/typeorm": "^5.2.2",
     "@nestjs/websockets": "^5.0.0-beta.6",
-    "bcrypt": "^3.0.3",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^1.30.1",
     "fastify-formbody": "^2.0.0",
     "install": "^0.12.2",
